# alleycat

./: .coverage  .env  .env-example  .gitignore  Makefile  README.md  pyproject.toml  setup.py  stoic_concepts.md  test_regex.py  test_setup.py
.cursor/rules/: format.cursor-rule  git-rules.mdc  my-details.mdc  no-mock-llm.yml  python-312-flask-api.mdc  python-best-practices.mdc  python-project-use-uv.mdc  python-project.cursor-rule  python.cursor-rule  uv.cursor-rule
.github/workflows/: ci.yml  python-tests.yml  release.yml  update-classifiers.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ai-project.md  alleycat-guide.md  deployment.md  developers-guide.md  examples.md  knowledge-base.md  markdown_examples.md  release-process.md  technical-reference.md  todo.md
docs/issues/: 15 file support.md  16 Structured Output.md  17 external tools.md  20 text file upload.md  23 knowledgebase.md  24 config files.md
prompts/: access-log.md  bash.txt  create-names.txt  diderot.txt  johnson.txt  ruru.txt  steiner.txt
schemas/: book_characters.schema.json  person.schema.json
scripts/: alleycat.sh  bump_version.py
src/alleycat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/alleycat_apps/: __init__.py
src/alleycat_apps/cli/: __init__.py  admin_cmd.py  main.py
src/alleycat_core/: __init__.py  logging.py
src/alleycat_core/config/: __init__.py  settings.py
src/alleycat_core/llm/: __init__.py  base.py  evaluation.py  openai.py  test_utils.py
src/cursortest/: __init__.py  cli.py
tests/: __init__.py  conftest.py  requirements-test.txt  test_cli.py  test_cursortest.py
tests/alleycat_apps/: __init__.py
tests/alleycat_apps/cli/: __init__.py  test_admin_cmd.py  test_cli.py
tests/alleycat_core/: __init__.py
tests/alleycat_core/config/: __init__.py  test_settings.py
tests/alleycat_core/kb/: __init__.py  test_openai_kb.py
tests/alleycat_core/llm/: __init__.py  test_base.py  test_evaluation.py  test_file_support.py  test_openai.py  test_remote_file.py  test_test_utils.py  test_utils.py
tests/data/: llm_test_cases.yaml
tests/fixtures/: cli_fixtures.py  openai_fixtures.py  sample.txt  ~$sample.txt
