[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cursortest"
version = "0.1.0"
description = "A Python project created with UV and modern best practices"
authors = [
    { name = "Andrew Watkins", email = "andrew@groat.nz" }
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.7.0"
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
hello-world = "cursortest.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "pytest-cov>=4.1.0",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "-ra -q --cov"
testpaths = ["tests"] 